# nanoGPT

./: alibi.py  model.py  pyproject.toml  runs.md  test_model.py  train.py
config/: train_shakespeare_char.py
