[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = "NanoGPT under poetry with ALIBI implementation"
authors = ["Fabien Campagne <1728407+fac2003@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
numpy = "1.22.4"
transformers = "^4.30.2"
datasets = "^2.13.1"
tiktoken = "^0.4.0"
wandb = "^0.15.5"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
